--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         tools:targetApi="31">
         <activity
             android:name=".FolkMusic"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
             android:exported="false" />
         <activity
             android:name=".CurrencyConverterActivity"
